# json-schemas

./: .gitignore  README.md  pyproject.toml  sample_data.csv
src/json_schemas/: main.py
src/json_schemas/crews/json_crew/: json_crew.py
src/json_schemas/crews/json_crew/config/: agents.yaml  tasks.yaml
src/json_schemas/tools/: check_output.py  get_configurations.py
src/schemas/: db.py  processor.py
